[package]
name = "tokenizations"
version = "0.4.0"
license = "MIT"
description = "Tokenizations alignments library"
homepage = "https://github.com/tamuhey/tokenizations"
repository = "https://github.com/tamuhey/tokenizations"
keywords = ["nlp", "text", "algorithm"]
authors = ["Yohei Tamura <tamuhey@gmail.com>"]
readme = "README.md"
documentation = "https://docs.rs/tokenizations"

[dependencies]
unicode-normalization = "0.1.8"
seqdiff = "0.2"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "0.9"

