[package]
name = "pytokenizations"
version = "0.6.0"
authors = ["Yohei Tamura <tamuhey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokenizations = { path = "..", version = "*" }


[lib]
name = "tokenizations"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "^0.12.0"
features = ["extension-module"]