[package]
name = "pytokenizations"
version = "0.8.4"
authors = ["Yohei Tamura <tamuhey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokenizations = "0.4.2"

[lib]
name = "tokenizations"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "^0.16.5"
features = ["extension-module"]
