[build-system]
requires = [ "maturin",]
build-backend = "maturin"

[tool.versionup]
tag = true
commit = true
files = [ "src/lib.rs", "Cargo.toml",]
tag_prefix = "python/"

[tool.poetry]
name = "pytokenizations"
version = "0.8.2"
description = ""
authors = [ "Yohei Tamura <tamuhey@gmail.com>",]
[[tool.poetry.packages]]
include = "tokenizations"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
hypothesis = "^6.3.0"
twine = "^3.3.0"
